# daltro_oliveira_vinuto_embarcatech_HBr_2025

./: README.md  install_picotool.sh
projects/contador_decrescente/: CMakeLists.txt  code.c
projects/leitura_de_sinais_joystick/: code.c
projects/monitor_de_temperatura/: CMakeLists.txt  code.c
projects/raspberry_blink/: CMakeLists.txt
projects/raspberry_blink/app/: main.c
projects/raspberry_blink/drivers/: led_embutido.c
projects/raspberry_blink/hal/: hal_led.c
projects/raspberry_blink/include/: hal_led.h  led_embutido.h
projects/self_balancing_robot/: CMakeLists.txt  README.md  main.c
projects/self_balancing_robot/include/: basic.h
projects/teste_unitario/: CMakeLists.txt
projects/teste_unitario/app/: main.c
projects/teste_unitario/hal/: temperature.c
projects/teste_unitario/include/: temperature.h
projects/teste_unitario/test/: simple_test  test.c
